--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,3 @@
-/*@font-face {
-    font-family: "ralewayregular";
-    src: url("../font/raleway-regular-webfont.woff2") format("woff2"),
-        url("../font/raleway-regular-webfont.woff") format("woff"),
-        url('../font/Raleway-Regular.ttf') format('truetype');
-        font-weight: normal;
-        font-style: normal;
-}*/
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');
 @font-face {
     font-family: 'ralewaysemibold';
@@ -32,6 +24,7 @@ body {
         color: #000000;
         background: #ffffff;
         margin: 5px;
+        overflow-x: hidden;
 }
 @media screen and (max-width: 480px) {
     body {
@@ -59,48 +52,88 @@ p {
 header {
     background-color: #fff;
     display: grid;
-    grid-template-columns: 1fr auto 3fr;
-    grid-template-areas: "logo . nav";
+    grid-template-columns: auto 1fr 30ch 15ch;
+    grid-template-areas: "logo . nav inscrire";
+    grid-gap: 0;
     line-height: 90px;
-    width: 100%;;
+    width: 100%;
+    height: 100%;
+}
+@media screen and (max-width: 480px) {
+    header {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: 
+            "logo inscrire"
+            "nav nav";
+        gap: 0;
+        line-height: 50px;
+    }
+}
+@media screen and (max-width: 767px) {
+    header {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: 
+        "logo inscrire"
+        "nav nav";
+        gap: 0;
+        line-height: 50px;
+    }
 }
 
 header #logo {
     grid-area: logo;
     padding-top: 20px;
+    width: 97;
+    height: 45;
+    float: left;
+}
+@media screen and (max-width: 480px) {
+    header #logo {
+        grid-area: logo;
+    }
+}
+@media screen and (max-width: 767px) {
+    header #logo {
+        grid-area: logo;
+    }
 }
 
 header nav {
-    font-family: 'ralewaylight';
-    grid-area: nav;
+    height: 100%;
+    grid-area: nav;  
+}
+@media screen and (max-width: 480px) {
+    header nav {
+        grid-area: logo;
+        width: 100%
+    }
+}
+@media screen and (max-width: 767px) {
+    header nav {
+        grid-area: nav;
+        width: 100%
+    }
 }
 
 header nav ul {
-    height: 100%;
+    height: auto;
+    font-family: 'ralewaylight';
+    grid-area: ul;
     display: flex;
-    justify-content: flex-end;
+    flex-flow: row nowrap;
     text-decoration: none;
     margin: 0;
     padding: 0;
 }
-@media screen and (max-width: 480px) {
-    header li.bouton {
-        display: flex;  
-        flex-wrap: wrap;
-    }
-}
-@media screen and (max-width: 767px) {
-    header nav li.bouton {
-        display: flex;  
-        flex-wrap: wrap;
-        flex-direction: row;
-    }
-}
 
 header nav li.bouton {
-    height: 100%;
+    height: auto;
     display: flex;
-    width: 15ch;
+    width: 30ch;
     justify-content: center;
     align-items: center;
 }
@@ -109,34 +142,60 @@ header nav li.bouton a {
     text-decoration: none;
     text-align: center;
     color: black;
-    border-top: 2px solid transparent;
 }
-
+@media screen and (min-width: 768px) {
 header nav li.bouton:hover a {
     color: #0065fc;
     border-top: 2px solid #0065fc;
     padding-left: 20px;
     padding-right: 20px;
-} 
- 
-header nav li.blue  {
-    font-family: 'ralewaysemibold';
-    height: 100%;
-    width: 15ch;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;   
+    } 
 }
-@media screen and (max-width: 480px) {
-    header nav li.blue {
-        display: flex;  
-        flex-wrap: wrap;
+@media screen and (max-width: 767px) {
+    header nav li.bouton:hover a { 
+        color: #0065fc;
+        border-bottom: 2px solid #0065fc;
+        padding-left: 50px;
+        padding-right: 50px;
     }
 }
-header nav li.blue a {
+@media screen and (max-width: 480px) {
+    header nav li.bouton:hover a { 
+        color: #0065fc;
+        border-bottom: 2px solid #0065fc;
+        padding-left: 50px;
+        padding-right: 50px;
+    } 
+}
+
+header .blue  {
+    font-family: 'ralewaysemibold';
+    grid-area: inscrire;
+    height: 100%;
+    width: 15ch;
+    color: #000000;
+    text-decoration: none;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+header .blue a {
     text-decoration: none;
     color: #0065fc;
+}
+@media screen and (max-width: 480px) {
+    header .blue {
+        grid-area: inscrire;
+    }
+}
+@media screen and (max-width: 767px) {
+    header .blue {
+        grid-area: inscrire;
+    }
 }
 
 main {
@@ -144,6 +203,7 @@ main {
     width: 100%;
     margin: 0;
     padding-top: 30px;
+    background: #ffffff;
 }
 
 main h1 {
@@ -207,34 +267,84 @@ main form.search-box input.search-txt {
     opacity: 1.0;
 }
 
-main form.search-box button { 
-    background-color: #0065fc;
-    color: #ffffff;
-    border-radius: 0 3mm 3mm 0;
-    cursor: pointer;
-    position: static;
-    border: none;
-    padding: 0 10px;
-    width: 100px;
-    height: 50px;
-    font-family: 'ralewaylight';
-    font-size: 15px;
+@media screen and (min-width: 768px) {
+    main form.search-box button.search { 
+        background-color: #0065fc;
+        color: #ffffff;
+        border-radius: 0 3mm 3mm 0;
+        cursor: pointer;
+        position: static;
+        border: none;
+        padding: 0 10px;
+        width: 100px;
+        height: 50px;
+        font-family: 'ralewaylight';
+        font-size: 15px;
+    }
+}
+@media screen and (max-width: 767px) {
+    main form.search-box button.search { 
+        display: none;
+    }
+}
+@media screen and (max-width: 767px) {
+    main form.search-box i.fa-search {
+        background-color: #0065fc;
+        color: #ffffff;
+        border-radius: 0 3mm 3mm 0;
+        cursor: pointer;
+        position: static;
+        border: none;
+        padding: 0 10px;
+        width: 50px;
+        height: 50px;
+        font-size: 15px;
+        text-align: center;
+        line-height: 50px;
+    }
+}
+@media screen and (min-width: 768px) {
+    main form.search-box i.fa-search { 
+        display: none;
+    }
 }
 
 main .filtre {
     font-family : "ralewaysemibold";
     font-size: 15px;
     color: #000000;
-    display: inline-flex;
+    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    column-gap: 20px;
-    justify-content: space-between;
-    padding: 10px 20px;
+}
+@media screen and (max-width: 480px) {
+    main .filtre ul {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        row-gap: 10px;
+    }
+}
+@media screen and (max-width: 767px) {
+    main .filtre ul {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        row-gap: 10px;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 959px) {
+    main .filtre ul {
+      display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        row-gap: 10px;
+    }
 }
 
 main .filtre h4 {
-    padding-right: 0;
+    text-align: left;
 }
 
 main li.btn {
@@ -283,33 +393,55 @@ main button.filtres {
     padding-left: 60px;
     padding-right: 30px;
 } 
-
 main button.filtres:hover {
     background-color: #deebff;
     color: #0065fc;
-    transition: 2s;
+    transition: 1s;
 }
 
 main .info {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    padding-left: 0;
+    display: inline-flex;
+    flex-flow: row wrap;
     align-items: center;
-    justify-content: left;
 }
+@media screen and (max-width: 767px) {
+    main .info {
+        display: grid;
+        grid-template-columns: 40px auto;
+    }
+    main i.fa-info-circle {
+        grid-column: 1 / 2;
+    }
+    main i.fa-circle {
+        grid-column: 1 / 2;
+    }
+    main .info p {
+        grid-column: 2 / 2;
+    }
+}
+
 main i.fa-info-circle {
     color: #ffffff; 
-
+    text-align: left;
+    font-size: 30px;
 }
 main i.fa-circle {
     color: #0065fc;
+    text-align: left;
+    font-size: 30px;
 }
-main #cercle {
+/*main #cercle {
     clip-path: circle(50% at 50% 50%);
     color:#f2f2f2;
-}
+}*/
 
+@media screen and (max-width: 767px) {
+    main .info p {
+    display: flex;
+    flex-flow: column wrap;
+    margin: 0%;
+    }
+}
 
 footer {
     width: 100%;
@@ -324,6 +456,7 @@ footer {
         flex-direction: column;
         flex-wrap: wrap;
         justify-content: space-between;
+        row-gap: 30px;
     }
 }
 @media screen and (max-width: 767px) {
@@ -332,6 +465,7 @@ footer {
         flex-direction: column;
         flex-wrap: wrap;
         justify-content: space-between;
+        row-gap: 30px;
     }
 }
 
