--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,5 +1,5 @@
 section {
-    width: 100%;
+    width: auto;
     height: auto;
     display: flex;
     flex-wrap: wrap;
@@ -7,6 +7,30 @@ section {
     column-gap: 30px;
     padding-top: 30px;
     padding-bottom: 30px;
+}
+@media screen and (max-width: 767px) {
+    section {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        row-gap: 30px;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 959px) {
+    section {
+      display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        row-gap: 30px;
+    }
+}
+@media screen and (min-width: 960px) and (max-width: 1362px) {
+    section {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        row-gap: 30px;
+    }
 }
 
 #hebergement {
@@ -20,24 +44,47 @@ section {
     height: auto;
     padding: 30px;
 }
+@media screen and (max-width: 767px) {
+    #hebergement {
+        order: 2;
+        background-color: #ffffff;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 959px) {
+    #hebergement {
+        order: 2;
+        background-color: #ffffff;
+    }
+}
+@media screen and (min-width: 960px) and (max-width: 1362px) {
+    #hebergement {
+        order: 2;
+    }
+}
 
 #hebergement h2 {
     font-family: "ralewaysemibold";
     font-weight: bold;
-    line-height: 30px;
+    line-height: 15px;
+}
+@media screen and (min-width: 1600px) {
+    #hebergement h2 {
+        padding-left: 110px;
+    }
 }
 
-.section1 {
+.section1 {   
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-gap: 30px;
     border-radius: 6mm;
-    width: 100%;
+    width: auto;
     height: auto;
     margin: 0px;
     padding: 0px;
     align-self: center;
+    justify-self: center;
 }
 @media screen and (max-width: 480px) {
     .section1 {
@@ -51,7 +98,25 @@ section {
 @media screen and (max-width: 767px) {
     .section1 {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 959px) {
+    .section1 {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media screen and (min-width: 960px) and (max-width: 1362px) {
+    .section1 {
+        display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
@@ -83,17 +148,28 @@ section {
 }
 .section1 article.four {
     grid-column: 1 / 3;
-    grid-row: 2 / 2;
+    grid-row: 2 / 3;
 }
 .section1 article.five {
     grid-column: 2 / 3;
-    grid-row: 2 / 2;
+    grid-row: 2 / 3;
 }
 .section1 article.six {
     grid-column: 3 / 3;
-    grid-row: 2 / 2;
+    grid-row: 2 / 3;
 }
-
+@media screen and (max-width: 680px) {
+    .section1 article {
+        width: 100%;
+        height: 250px;
+    }
+}
+@media screen and (min-width: 1600px) {
+    .section1 article {
+        width: 300px;
+        height: 250px;
+    }
+}
 .section1 article a {
     text-decoration: none;
     color: black;
@@ -106,10 +182,6 @@ section {
     height: 60%;
     border-radius: 5.5mm 5.5mm 0 0;
 }
-
-.section1 :hover img {
-
-  }
 
 .section1 h4 {
     line-height: 0px;
@@ -153,6 +225,11 @@ section {
     text-decoration: none;
     color: black;
 }
+@media screen and (min-width: 1600px) {
+    #hebergement h4.afficher {
+        padding-left: 110px;
+    }
+}
 
 #populaire {
     flex: 3;
@@ -164,6 +241,26 @@ section {
     width: auto;
     height: auto;
     padding: 30px;
+}
+@media screen and (max-width: 480px) {
+    #populaire {
+        order: 1;
+    }
+}
+@media screen and (max-width: 767px) {
+    #populaire {
+        order: 1;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 959px) {
+    #populaire {
+        order: 1;
+    }
+}
+@media screen and (min-width: 960px) and (max-width: 1362px) {
+    #populaire {
+        order: 1;
+    }
 }
 
 #populaire h2 {
@@ -179,19 +276,24 @@ i.fa-line-chart {
     line-height: 30px;
     padding-right: 10px;
 }
-
-.section2 {
+@media screen and (min-width: 1600px) {
+    #populaire h2 {
+        padding-left: 50px;
+    }
+}
+.section2 { 
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     grid-gap: 30px;
     background-color: #f2f2f2;
     border-radius: 6mm;
-    width: 100%;
+    width: auto;
     height: auto;
     margin: 0;
     padding: 0;
     align-self: center;
+    justify-self: center;
 }
 @media screen and (max-width: 480px) {
     .section2 {
@@ -205,7 +307,25 @@ i.fa-line-chart {
 @media screen and (max-width: 767px) {
     .section2 {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 959px) {
+    .section2 {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media screen and (min-width: 960px) and (max-width: 1362px) {
+    .section2 {
+        display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
@@ -225,7 +345,7 @@ i.fa-line-chart {
 }  
 .section2 article.one {
     grid-column: 1;
-    grid-row: 1 / 3;
+    grid-row: 1 / 2;
 }
 .section2 article.two {
     grid-column: 1;
@@ -233,7 +353,13 @@ i.fa-line-chart {
 }
 .section2 article.three {
     grid-column: 1;
-    grid-row: 3 / 3;
+    grid-row: 3 / 4;
+}
+@media screen and (min-width: 1600px) {
+    .section2 article {
+        width: 400px;
+        height: 200px;
+    }
 }
 
 .section2 img {
@@ -289,7 +415,19 @@ aside {
 aside h2 {
     font-family: "ralewaysemibold";
     font-weight: bold;
+    line-height: 30px;
 }
+@media screen and (max-width: 767px) {
+    aside h2 {
+        margin-left: 40px;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1082px) {
+    aside h2 {
+        margin-left: 40px;
+    }
+}
+
 
 .activite {
     display: grid;
@@ -301,20 +439,22 @@ aside h2 {
     padding: 0;
     margin: 0;
 }
-@media screen and (max-width: 480px) {
-    .activite {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-}
 @media screen and (max-width: 767px) {
     .activite {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1082px) {
+    .activite {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
     }
 }
 
@@ -341,13 +481,6 @@ aside h2 {
     border-radius: 0 0 5.5mm 5.5mm;
     bottom: 0%;
 }
-
-@media screen and (max-width: 767px) {
-    .activite figcaption {
-        text-align: center;
-    }
-}
-
 .activite figure {
     border-radius: 6mm 6mm 6mm 6mm;
     width : 100%;
@@ -391,5 +524,23 @@ aside h2 {
     grid-row: 2 / span 3;
     height: 325px;
 }
-
-
+@media screen and (max-width: 767px) {
+    .activite figure {
+        width: 350px;
+        height: 250px;
+        max-width: 350px;
+        max-height: 250px;
+        min-width: 350px;
+        min-height: 250px;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1082px) {
+    .activite figure {
+        width: 250px;
+        height: 200px;
+        max-width: 250px;
+        max-height: 200px;
+        min-width: 250px;
+        min-height: 200px;
+    }
+}
